--- a/kitchentimer/android-sources/AndroidManifest.xml
+++ b/kitchentimer/android-sources/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <manifest package="com.brandymint.kitchentimer" xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" android:versionCode="1" android:installLocation="auto">
-    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name">
+    <application android:name="org.qtproject.qt5.android.bindings.QtApplication" android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
                   android:name="org.qtproject.qt5.android.bindings.QtActivity"
                   android:label="@string/app_name"
-                  android:screenOrientation="unspecified">
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
