--- a/kitchentimer/android-sources/AndroidManifest.xml
+++ b/kitchentimer/android-sources/AndroidManifest.xml
@@ -3,7 +3,8 @@
     <application android:name="org.qtproject.qt5.android.bindings.QtApplication"
 		 android:label="@string/app_name"
 		 android:icon="@drawable/icon"
-		 android:debuggable="true"
+		 android:debuggable="false"
+		 android:hardwareAccelerated="true"
 		 >
         <activity android:configChanges="orientation|uiMode|screenLayout|screenSize|smallestScreenSize|locale|fontScale|keyboard|keyboardHidden|navigation"
                   android:name="com.brandymint.kitchentimer.MainActivity"
