--- a/kitchentimer/ios-sources/Qt_Info.plist
+++ b/kitchentimer/ios-sources/Qt_Info.plist
@@ -10,16 +10,18 @@
 	<array>
 	  <string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UILaunchImageFile</key>
+	<string>Default</string>
 	<key>CFBundleIconFiles</key>
 	<array>
 	  <string>Icon.png</string>
-	  <string>Icon@2.png</string>
+	  <string>Icon@2x.png</string>
 	  <string>Icon-72.png</string>
-	  <string>Icon-72@2.png</string>
+	  <string>Icon-72@2x.png</string>
 	  <string>Icon-Small.png</string>
-	  <string>Icon-Small@2.png</string>
+	  <string>Icon-Small@2x.png</string>
 	  <string>Icon-Small-50.png</string>
-	  <string>Icon-Small-50@2.png</string>
+	  <string>Icon-Small-50@2x.png</string>
 	</array>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
